[package]
name = "wump"
version = "0.1.0"

[dependencies]
chrono     = "*"
mpd        = "*"
bitflags   = "*"
rouille    = "*"
tinytemplate = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
rppal = { version = "*", features = ["hal"] }
ssd1322 = "*"
rusttype   = "*"

[patch.crates-io]
ssd1322 = { path = 'ssd1322' }