[package]
name = "wump"
version = "0.5.0"

[dependencies]
signal-hook  = "*"
chrono       = "*"
mpd          = "*"
bitflags     = "*"
rppal        = "*"
spidev       = "*"
bitmap-font  = "*"
serde_json   = "*"

rouille      = "*"
tinytemplate = "1.0"
serde        = { version = "1.0", features = ["derive"] }
